--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: surendra-portfolio-deployment
+  namespace: argocd
   labels:
     app: surendra-portfolio
 spec:
