--- a/service.yaml
+++ b/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: surendra-portfolio-service
+  namespace: argocd
   labels:
     app: surendra-portfolio
 spec:
